# linkedin-copilot

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.ai/: NEXT_DEVELOPMENT_OPPORTUNITIES.md
.ai/epics/: NOTIFICATIONS_NEXT_BEST_ACTION.md
.ai/knowlege-base/: CAREERS_FLOW.md  GETTING_STARTED_PAGE.md  HANDOVER.md  SEARCH_EXPERIENCE.md
.ai/prompts/: EPIC_PLANNER.md  IMPLEMENT_FEATURE.md  QA_REFACTOR.md
config/: selectors.yaml  settings.yaml
data/profiles/: profile.json
data/resumes/: sample_resume.txt
docs/superpowers/specs/: 2026-03-24-unified-search-engine-design.md
linkedin_copilot/: README.md
src/linkedin_copilot/: __init__.py  browser.py  cli.py  config.py  db.py  llm.py  logging_setup.py  main.py  models.py  pipeline_worker.py  prompts.py  state.py  ui_hints.py  utils.py  web.py
src/linkedin_copilot/careers/: __init__.py  base.py  detector.py  greenhouse.py  lever.py  registry.py  workday.py
src/linkedin_copilot/explore/: __init__.py  engine.py  intelligence.py  strategies.py
src/linkedin_copilot/linkedin/: __init__.py  apply.py  apply_session.py  auth.py  extract.py  form_detector.py  forms.py  google_jobs.py  safety.py  search.py  (+1 more)
tests/: test_apply_session.py  test_badges.py  test_careers.py  test_careers_staging.py  test_config.py  test_dashboard.py  test_explore.py  test_logo_scraping.py  test_matcher.py  test_pagination.py  test_pipeline_tasks.py  test_run_batch_api.py  test_storage.py  test_suggestion_engine.py  test_ui_hints.py  test_web_nav.py  test_web_search.py  test_workday_rescrape.py
(+18 files in other folders)
